
import Socio from "../src/socio"


export default class SocioVip extends Socio{


    calcularCuotaMensual():number{
        return this.cuotaMensual;
    }

}